tests/NormalTests/paczka1/fuzzy1/99467568.err
Error in line 1: S631 S631 13,2
Error in line 4: pGt S704 95,1
Error in line 10: Kza8qxk A107 N7,4
Error in line 12: szwHT S631 20,0
Error in line 18: nYkpC S704 21,4
Error in line 23: pGt S631 15,3
Error in line 32: nYkpC S704 78,42
Error in line 11: Kza8qxk A107 122,3
Error in line 31: nYkpC S631 2,5
Error in line 34: Kza8qxk A322 86,4
